# InheritX

./: .gitignore  README.md
.github/workflows/: backend.yml  contracts.yml  frontend.yml
backend/: .env.example  Cargo.toml
backend/.cargo/: config.toml
backend/src/: api.rs  cache.rs  inactivity_watchdog.rs  kyc_webhook.rs  lib.rs  main.rs  telemetry.rs  webhooks.rs
backend/tests/: api_tests.rs  kyc_webhook_test.rs  middleware_tests.rs
contracts/: Cargo.toml
contracts/inheritance-contract/src/: lib.rs  safe_math.rs  test.rs
contracts/mock-token/src/: lib.rs
contracts/mock-token/test_snapshots/property_tests/: prop_balance_never_negative.1.json  prop_balance_never_negative.10.json  prop_balance_never_negative.100.json  prop_balance_never_negative.101.json  prop_balance_never_negative.102.json  prop_balance_never_negative.103.json  prop_balance_never_negative.104.json  prop_balance_never_negative.105.json  prop_balance_never_negative.106.json  prop_balance_never_negative.107.json  prop_balance_never_negative.108.json  prop_balance_never_negative.109.json  prop_balance_never_negative.11.json  prop_balance_never_negative.110.json  prop_balance_never_negative.111.json  prop_balance_never_negative.112.json  prop_balance_never_negative.113.json  prop_balance_never_negative.114.json  prop_balance_never_negative.115.json  prop_balance_never_negative.116.json  prop_balance_never_negative.117.json  prop_balance_never_negative.118.json  prop_balance_never_negative.119.json  prop_balance_never_negative.12.json  prop_balance_never_negative.120.json  prop_balance_never_negative.121.json  prop_balance_never_negative.122.json  prop_balance_never_negative.123.json  prop_balance_never_negative.124.json  prop_balance_never_negative.125.json  (+738 more)
frontend/: .npmrc  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/Guidelines/: page.tsx
frontend/app/about/: page.tsx
frontend/app/admin/: layout.tsx
frontend/app/asset-owner/: page.tsx
frontend/app/faqs/: page.tsx
frontend/app/how-it-works/: page.tsx
frontend/app/privacy-policy/: page.tsx
frontend/components/: WalletModal.tsx
frontend/components/dashboard/: AdminSidebarNav.tsx  DashboardLayout.tsx  OwnerSidebarNav.tsx
frontend/context/: KYCContext.tsx  WalletContext.tsx
frontend/lib/: mockStore.ts
(+16 files in other folders)
