[package]
name = "inheritx-backend"
version = "0.1.0"
edition = "2021"

# ─── Feature flags ────────────────────────────────────────────────────────────
# Default build includes everything. Contributors who just want to run the
# server without Redis, Prometheus or PDF generation can use:
#   cargo build --no-default-features -F minimal
[features]
default = ["redis-cache", "metrics", "pdf"]
minimal = []
redis-cache = ["dep:redis"]
metrics = ["dep:prometheus"]
pdf = ["dep:printpdf"]

[dependencies]
# Async runtime — only the features we actually use
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal"] }

# HTTP server — multipart removed (no multipart upload handlers exist)
axum = { version = "0.8", features = ["json", "macros", "ws"] }

# Middleware / utilities
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "set-header"] }

# Serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time / date
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# IDs / randomness
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.33", features = ["serde-float", "maths"] }

# Config
dotenvy = "0.15"

# HTTP client (Stellar anchor calls)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Crypto / auth
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9.0"
base64 = "0.21"
stellar-strkey = "0.0.8"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "rand_core"] }

# Utilities
dashmap = "6"
once_cell = "1.19"

# Optional: Redis cache
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

# Optional: Prometheus metrics
prometheus = { version = "0.13", features = ["process"], optional = true }

# Optional: PDF report generation
printpdf = { version = "0.7", optional = true }
